--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 }
 
 .App {
-  height: 80vh;
-  width: 600px;
+  max-height: 80vh;
+  max-width: 600px;
   border-radius: 15px;
   padding: 0 15px;
   overflow-y: auto;
